// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase 3: Coordinate Calculation (Snapshot-based) > should calculate correct coordinates for input-4outputs.bpmn 1`] = `
{
  "end1": {
    "height": 36,
    "width": 36,
    "x": 832,
    "y": 152,
  },
  "gw1": {
    "height": 50,
    "width": 50,
    "x": 425,
    "y": 331,
  },
  "start1": {
    "height": 36,
    "width": 36,
    "x": 232,
    "y": 152,
  },
  "task1": {
    "height": 80,
    "width": 100,
    "x": 400,
    "y": 130,
  },
  "task2": {
    "height": 80,
    "width": 100,
    "x": 600,
    "y": 316,
  },
  "task3": {
    "height": 80,
    "width": 100,
    "x": 600,
    "y": 452,
  },
  "task4": {
    "height": 80,
    "width": 100,
    "x": 600,
    "y": 588,
  },
  "task5": {
    "height": 80,
    "width": 100,
    "x": 600,
    "y": 724,
  },
}
`;

exports[`Phase 3: Coordinate Calculation (Snapshot-based) > should calculate correct coordinates for input-4outputs.bpmn 2`] = `
{
  "f1": [
    {
      "x": 268,
      "y": 170,
    },
    {
      "x": 400,
      "y": 170,
    },
  ],
  "f10": [
    {
      "x": 700,
      "y": 764,
    },
    {
      "x": 850,
      "y": 764,
    },
    {
      "x": 850,
      "y": 188,
    },
  ],
  "f2": [
    {
      "x": 450,
      "y": 210,
    },
    {
      "x": 450,
      "y": 331,
    },
  ],
  "f3": [
    {
      "x": 475,
      "y": 356,
    },
    {
      "x": 600,
      "y": 356,
    },
  ],
  "f4": [
    {
      "x": 450,
      "y": 381,
    },
    {
      "x": 450,
      "y": 492,
    },
    {
      "x": 600,
      "y": 492,
    },
  ],
  "f5": [
    {
      "x": 450,
      "y": 381,
    },
    {
      "x": 450,
      "y": 628,
    },
    {
      "x": 600,
      "y": 628,
    },
  ],
  "f6": [
    {
      "x": 450,
      "y": 381,
    },
    {
      "x": 450,
      "y": 764,
    },
    {
      "x": 600,
      "y": 764,
    },
  ],
  "f7": [
    {
      "x": 700,
      "y": 356,
    },
    {
      "x": 850,
      "y": 356,
    },
    {
      "x": 850,
      "y": 188,
    },
  ],
  "f8": [
    {
      "x": 700,
      "y": 492,
    },
    {
      "x": 850,
      "y": 492,
    },
    {
      "x": 850,
      "y": 188,
    },
  ],
  "f9": [
    {
      "x": 700,
      "y": 628,
    },
    {
      "x": 850,
      "y": 628,
    },
    {
      "x": 850,
      "y": 188,
    },
  ],
}
`;

exports[`Phase 3: Coordinate Calculation (Snapshot-based) > should calculate correct coordinates for simple-3-lane.bpmn 1`] = `
{
  "end1": {
    "height": 36,
    "width": 36,
    "x": 832,
    "y": 152,
  },
  "start1": {
    "height": 36,
    "width": 36,
    "x": 232,
    "y": 152,
  },
  "task1": {
    "height": 80,
    "width": 100,
    "x": 600,
    "y": 130,
  },
  "task2": {
    "height": 80,
    "width": 100,
    "x": 600,
    "y": 310,
  },
  "task3": {
    "height": 80,
    "width": 100,
    "x": 600,
    "y": 490,
  },
  "xor1": {
    "height": 50,
    "width": 50,
    "x": 425,
    "y": 145,
  },
}
`;
